# LabProgrammazione

./: CMakeLists.txt  Item.cpp  Item.h  Observer.h  README.md  ShoppingList.cpp  ShoppingList.h  Subject.h  User.cpp  User.h  main.cpp
Test/: CMakeLists.txt  ItemTest.cpp  ListaTest.cpp  ObserverTest.cpp  UserTest.cpp
